# sot-talos-balance

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
doc/: Doxyfile.extra.in  (+4 more)
include/sot/talos_balance/: CMakeLists.txt  admittance-controller-end-effector.hh  admittance-controller-op-point.hh  admittance-controller-single-joint.hh  admittance-controller.hh  ankle-admittance-controller.hh  ankle-joint-selector.hh  base-estimator.hh  boolean-identity.hh  com-admittance-controller.hh  common.hh  control-manager.hh  coupled-admittance-controller.hh  dcm-com-controller.hh  dcm-controller.hh  dcm-estimator.hh  distribute-wrench.hh  dummy-dcm-estimator.hh  dummy-walking-pattern-generator.hh  euler-to-quat.hh  example.hh  filter-differentiator.hh  foot-force-difference-controller.hh  ft-calibration.hh  ft-wrist-calibration.hh  hip-flexibility-calibration.hh  hip-flexibility-compensation.hh  imu_offset_compensation.hh  int-identity.hh  joint-admittance-controller.hh  joint-position-controller.hh  joint-trajectory-generator.hh  madgwickahrs.hh  nd-trajectory-generator.hh  parameter-server.hh  pose-quaternion-to-matrix-homo.hh  qualisys-client.hh  quat-to-euler.hh  robot-utils.hh  round-double-to-int.hh  (+13 more)
python/sot_talos_balance/: CMakeLists.txt  control_manager_conf.py  create_entities_utils.py  extract_torque_motorenc_joint_enc_batteries.py  meta_task_config.py  meta_task_joint.py  meta_task_pose.py  motor_parameters.py
python/sot_talos_balance/relationship_torques_measured_rnea/: rnea_delta_q.py
python/sot_talos_balance/talos/: balance_ctrl_conf.py  balance_ctrl_sim_conf.py  base_estimator_conf.py  base_estimator_sim_conf.py  control_manager_conf.py  control_manager_sim_conf.py  current_controller_conf.py  current_controller_sim_conf.py  distribute_conf.py  force_offset_conf.py  force_torque_estimator_conf.py  ft_calibration_conf.py  ft_wrist_calibration_conf.py  hip_flexibility_compensation_conf.py  joint_torque_controller_conf.py  joint_torque_controller_sim_conf.py  parameter_server_conf.py
python/sot_talos_balance/test/: CMakeLists.txt  appli_COMTraj.py  appli_COMTraj_checkfeedback_gazebo.py  appli_COMTraj_feedback_gazebo.py  appli_COMTraj_sensorfeedback.py  appli_admittance_drill.py  appli_admittance_end_effector.py  appli_admittance_single_joint.py  appli_admittance_single_joint_velocity_based.py  appli_ankle_admittance.py  appli_ankle_admittance_joint.py  appli_ankle_joint_admittance.py  appli_base_estimator.py  appli_base_estimator_integrator.py  appli_config_feedback_gazebo.py  appli_coupled_ankle_admittance.py  appli_dcmAnkleControl.py  appli_dcmComControl.py  appli_dcmComZmpControl.py  appli_dcmControl_CtrlMngr.py  appli_dcmCopControl.py  appli_dcmCoupledAndSingleAnkleControl.py  appli_dcmCoupledAnkleControl.py  appli_dcmSingleAnkleControl.py  appli_dcmSingleCopControl.py  appli_dcmZmpControl.py  appli_dcmZmpControl_distribute.py  appli_dcmZmpControl_estimator.py  appli_dcmZmpControl_feedback.py  appli_dcmZmpControl_file.py  appli_dcmZmpControl_online.py  appli_dcmZmpCopControl.py  appli_dcmZmpFootControl.py  appli_dcmZmpWaistControl.py  appli_dcm_estimator.py  appli_dcm_zmp_control.py  appli_dcm_zmp_control_distribute.py  appli_dcm_zmp_control_ffdc.py  appli_dcm_zmp_control_ffdc_fp.py  appli_dcm_zmp_control_flex.py  (+81 more)
ros/sot_talos_balance/: package.xml
src/: CMakeLists.txt  admittance-controller-end-effector.cpp  admittance-controller-op-point.cpp  admittance-controller-single-joint.cpp  admittance-controller.cpp  ankle-admittance-controller.cpp  ankle-joint-selector.cpp  base-estimator.cpp  boolean-identity.cpp  com-admittance-controller.cpp  common.cpp  control-manager.cpp  coupled-admittance-controller.cpp  dcm-com-controller.cpp  dcm-controller.cpp  dcm-estimator.cpp  delay.cpp  distribute-wrench.cpp  dummy-dcm-estimator.cpp  dummy-walking-pattern-generator.cpp  euler-to-quat.cpp  example.cpp  filter-differentiator.cpp  foot-force-difference-controller.cpp  ft-calibration.cpp  ft-wrist-calibration.cpp  hip-flexibility-calibration.cpp  hip-flexibility-compensation.cpp  imu_offset_compensation.cpp  int-identity.cpp  joint-admittance-controller.cpp  joint-position-controller.cpp  joint-trajectory-generator.cpp  logger.cpp  madgwickahrs.cpp  nd-trajectory-generator.cpp  parameter-server.cpp  pose-quaternion-to-matrix-homo.cpp  qualisys-client.cpp  quat-to-euler.cpp  (+15 more)
src/robot/: robot-wrapper.cpp
src/sdk_qualisys/: Markup.cpp  Network.cpp  RTPacket.cpp  RTProtocol.cpp
src/sot_talos_balance/: create_entities_utils.py  extract_torque_motorenc_joint_enc_batteries.py  meta_task_config.py  meta_task_pose.py
src/utils/: causal-filter.cpp  common.cpp  logger.cpp  statistics.cpp  trajectory-generators.cpp
tests/: CMakeLists.txt  dummy.cpp  test_distribute.cpp
tests/python/: CMakeLists.txt  simulate-ZMP-DCM-regulation-of-LIP.py  test_base_estimator.py  test_com_admittance.py  test_com_estimation.py  test_control.py  test_ctrl_manager.py  test_dcm_controller_talos.py  test_dcm_distribute.py  test_dcm_estimator.py  test_distribute.py  test_dummy_dcm_estimator.py  test_dummy_wpgen.py  test_foot_force_difference_controller.py  test_round_double_to_int.py  test_simple_admittance.py  test_simple_distribute.py  test_state_transformation.py
unittest/: CMakeLists.txt  test-paths.h.cmake  test_distribute.cpp
unittest/python/: CMakeLists.txt  appli_jointTrajGen.py  test_admittance.py  test_ankle_joint_selector.py  test_base_estimator.py  test_com_admittance.py  test_com_estimation.py  test_com_estimator.py  test_control.py  test_ctrl_manager.py  test_dcm_controller.py  test_dcm_controller_talos.py  test_dcm_distribute.py  test_dcm_estimator.py  test_distribute.py  test_dummy_dcm_estimator.py  test_dummy_wpgen.py  test_eulerquat.py  test_example.py  test_foot_force_difference_controller.py  test_ft_calibration.py  test_jointTrajGen.py  test_joint_admittance.py  test_round_double_to_int.py  test_saturation.py  test_simple_admittance.py  test_simple_distribute.py  test_simple_state_integrator.py  test_simple_zmp_estimator.py  test_state_transformation.py
(+144 files in other folders)
