<?xml version="1.0"?>
<!--Author: Gabriele Buondonno-->
<package>
  <name>sot-talos-balance</name>
  <version>1.9.0</version>
  <description>The sot_talos_balance package</description>

  <maintainer email="gbuondon@laas.fr">Gabriele Buondonno</maintainer>

  <license>BSD</license>


  <build_depend>dynamic_graph_bridge</build_depend>
  <build_depend>dynamic-graph-python</build_depend>
  <build_depend>sot_core</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>talos_controller_configuration</build_depend>
  <build_depend>talos_description</build_depend>
  <build_depend>talos_hardware_gazebo</build_depend>
  <build_depend>talos_bringup</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>pal_gazebo_plugins</build_depend>
  <build_depend>pal_gazebo_worlds</build_depend>
  <build_depend>roboticsgroup_gazebo_plugins</build_depend>
  <build_depend>talos_controller_configuration_gazebo</build_depend>
  <build_depend>talos_gazebo</build_depend>

  <run_depend>dynamic_graph_bridge</run_depend>
  <run_depend>dynamic-graph-python</run_depend>
  <run_depend>sot_core</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>talos_controller_configuration</run_depend>
  <run_depend>talos_description</run_depend>
  <run_depend>talos_hardware_gazebo</run_depend>
  <run_depend>talos_bringup</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>
  <run_depend>talos_controller_configuration_gazebo</run_depend>
  <run_depend>talos_gazebo</run_depend>
  <run_depend>talos_data</run_depend>

  <export>
  </export>
</package>
